update: style, index, scrollup button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mike.is&#40;&#41;</title>
+    <title>mike.is()</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link href="./styles/styles.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/92713723cc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -21,7 +25,7 @@
         </div>
         <div class="about__mikeis">
           <h1 class="mike">mike</h1>
-          <h1 class="is">.is&#40;&#41;</h1>
+          <h1 class="is">.is()</h1>
         </div>
         <div class="about__description">
           <p>
@@ -37,17 +41,142 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, tenetur possimus.
           ></span>
         </div>
       </section>
-
-    </section>
     <section id="skills" class="skills">
       <h1>skills</h1>
+      <div class="skills__container">
+        <div class="skill">
+          <h2>HTML</h2>
+          <p>Experienced in creating semantic and accessible HTML structures.</p>
+        </div>
+        <div class="skill">
+          <h2>CSS</h2>
+          <p>Proficient in modern CSS techniques including Flexbox, Grid, and animations.</p>
+        </div>
+        <div class="skill">
+          <h2>JavaScript</h2>
+          <p>Skilled in vanilla JavaScript and popular frameworks like React and Vue.js.</p>
+        </div>
+        <div class="skill">
+          <h2>Responsive Design</h2>
+          <p>Adept at creating responsive and mobile-first web designs.</p>
+        </div>
+        <div class="skill">
+          <h2>Version Control</h2>
+          <p>Experienced with Git and GitHub for version control and collaboration.</p>
+        </div>
+        <div class="skill">
+          <h2>Web Performance</h2>
+          <p>Knowledgeable in optimizing web performance and SEO best practices.</p>
+        </div>
+      </div>
     </section>
     <section id="portfolio" class="portfolio">
       <h1>portfolio</h1>
+      <div class="portfolio__container">
+        <div class="project">
+          <img src="./assets/project1.jpg" alt="Project 1">
+          <div class="project__overlay">
+            <p>Project 1: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject1.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project1" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project2.jpg" alt="Project 2">
+          <div class="project__overlay">
+            <p>Project 2: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject2.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project2" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 3">
+          <div class="project__overlay">
+            <p>Project 3: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 4">
+          <div class="project__overlay">
+            <p>Project 4: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 5">
+          <div class="project__overlay">
+            <p>Project 5: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 6">
+          <div class="project__overlay">
+            <p>Project 6: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 7">
+          <div class="project__overlay">
+            <p>Project 7: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 8">
+          <div class="project__overlay">
+            <p>Project 8: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <img src="./assets/project3.jpg" alt="Project 9">
+          <div class="project__overlay">
+            <p>Project 9: A brief description of the project.</p>
+            <div class="project__buttons">
+              <a href="https://liveproject3.com" target="_blank" class="btn">Live Project</a>
+              <a href="https://github.com/yourusername/project3" target="_blank" class="btn">Show Code</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="contact" class="contact">
-      <p>Feel free to contact me now! :&#41;</p>
+      <p>Feel free to contact me now! :)</p>
       <a class="mail" href="mailto:stanekmichal96@gmail.com">stanekmichal96@gmail.com</a>
+      <form action="mailto:stanekmichal96@gmail.com" method="post" enctype="text/plain">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+        <button type="submit">Send</button>
+      </form>
       <div class="media">
           <a target="_blank" href="https://www.linkedin.com/in/stanek-michal/"><i class="fa-brands fa-linkedin"></i></a>
           <a target="_blank" href="https://github.com/stanekmichal96"><i class="fa-brands fa-github"></i></a>
@@ -55,67 +184,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, tenetur possimus.
     </section>
 
     </div>
-
-    <script src="./scripts/typing.js"></script>
-    <!-- <script src="./scripts/scrollUp.js"></script> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
-    <script
-      src="https://kit.fontawesome.com/92713723cc.js"
-      crossorigin="anonymous"
-    ></script>
-    <link href="./styles/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-
-    <!-- <nav>
-        <ul>
-            <li><a href="#about">about</a></li>
-            <li><a href="#skills">skills</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
-            <li><a href="#contact">contact</a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-        </ul>
-    </nav> -->
-
-    <div class="container">
-      <section id="about" class="about">
-        <wrapper>
-          <div class="begin">
-            <h1 class="mike">mike</h1>
-            <h1 class="is">.is&#40;&#41;</h1>
-          </div>
-          <div class="description">
-            <p>Michał Stanek - 26 years old man, who is looking for his opportunity to get dreams.</p>
-          </div>
-          <div class="typing">
-              <span>I am a&#160;</span>
-            <span
-              class="txt-type"
-              data-wait="2300"
-              data-words='["Frontend Developer", "Freelancer", "Code-lover", "Dreamer"]'
-            ></span>
-          </div>
-        </wrapper>
-      </section>
-      <section id="skills" class="skills">
-        <h1>skills</h1>
-      </section>
-      <section id="portfolio" class="portfolio">
-        <h1>portfolio</h1>
-      </section>
-      <section id="contact" class="contact">
-        <p>Feel free to contact me now! :&#41;</p>
-        <a class="mail" href="mailto:stanekmichal96@gmail.com">stanekmichal96@gmail.com</a>
-        <div class="media">
-            <a target="_blank" href="https://www.linkedin.com/in/stanek-michal/"><i class="fa-brands fa-linkedin"></i></a>
-            <a target="_blank" href="https://github.com/stanekmichal96"><i class="fa-brands fa-github"></i></a>
-        </div>
-      </section>
-    </div>
-
+    <button id="scrollToTopButton" style="position: fixed; bottom: 80px; right: 80px; display: none;">Scroll to Top</button>
     <script src="./scripts/typing.js"></script>
     <script src="./scripts/scrollUp.js"></script>
   </body>
